--- a/Source/Presentation/SampleDemo.Presentation/SampleDemo.Presentation.csproj
+++ b/Source/Presentation/SampleDemo.Presentation/SampleDemo.Presentation.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
+  </ItemGroup>
   
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Service.Contracts\Service.Contracts.csproj" />
