--- a/Source/Web/Web.csproj
+++ b/Source/Web/Web.csproj
@@ -24,4 +24,8 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.0" />
+  </ItemGroup>
+
 </Project>
