Identity and JWT

--- a/Source/Web/appsettings.json
+++ b/Source/Web/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "SqlConnection": "Server=NASIR-LAP;Database=SampleDemo;Integrated Security=true;TrustServerCertificate=true"
   },
+  "JwtSettings": {
+    "validIssuer": "CodeMazeAPI",
+    "validAudience": "https://localhost:5001",
+    "secretKey": "ACDEFIJKL#582ARULKLHKKLLJH698",
+    "expires": 5
+  },
   "AllowedHosts": "*"
 }
